add circles example

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,17 @@
     <title>Time Intervall</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spiral.css">
+    <link rel="stylesheet" href="css/circles.css">
     <link rel="stylesheet" href="css/circle.css">
     <link rel="stylesheet" href="css/graph.css">
 </head>
 <body>
     <div class="container" id="spiral"></div>
+    <div class="container" id="circles"></div>
     <div class="container" id="circle"></div>
     <div class="container" id="graph"></div>
     <script type="module" src="js/spiral.js"></script>
+    <script type="module" src="js/circles.js"></script>
     <script type="module" src="js/circle.js"></script>
     <script type="module" src="js/graph.js"></script>
 </body>
