--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Intervall</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="spiral/spiral.css">
+    <link rel="stylesheet" href="css/spiral2.css">
     <link rel="stylesheet" href="css/spiral.css">
     <link rel="stylesheet" href="css/line.css">
     <link rel="stylesheet" href="css/circles.css">
@@ -19,7 +19,7 @@
     <div class="container" id="circles"></div>
     <div class="container" id="circle"></div>
     <div class="container" id="graph"></div>
-    <script type="module" src="spiral/spiral.js"></script>
+    <script type="module" src="js/spiral2.js"></script>
     <script type="module" src="js/spiral.js"></script>
     <script type="module" src="js/line.js"></script>
     <script type="module" src="js/circles.js"></script>
