--- a/src/ms1/index.html
+++ b/src/ms1/index.html
@@ -27,7 +27,7 @@
                 width: 80%;
                 display: flex;
                 z-index: 10000;
-                background-color: yellow;
+                background-color: lightblue;
                 gap: 1rem;
                 font-size: 15pt;
             }
@@ -41,7 +41,7 @@
             }
             body {
                 color: rgb(30, 30, 30);
-                background-color: yellow;
+                background-color: lightblue;
                 font-size: 20pt;
             }
             div[id="2"] {
