add segments to css, html

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="spiral.css">
 </head>
 <body>
-    <div class="container" id="spiralTime"></div>
+    <div class="container" id="spiralTime">
+        <div class="segments" id="segments"></div>
+    </div>
     <script type="module" src="spiral.js"></script>
 </body>
 </html>
