--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Intervall</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="spiral.css">
-</head>
-<body>
-    <div class="container" id="spiralTime">
-        <div class="segments" id="segments"></div>
-    </div>
-    <script type="module" src="spiral.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Time Intervall</title>
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="spiral.css" />
+    </head>
+    <body>
+        <div class="container" id="spiralTime">
+            <div class="segments" id="segments"></div>
+        </div>
+        <script type="module" src="spiral.js"></script>
+    </body>
 </html>
