--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -11,6 +11,7 @@
         <div class="container" id="spiralTime">
             <div class="segments" id="segments"></div>
         </div>
+        <!-- <script type="module" src="svgs.js"></script> -->
         <script type="module" src="spiral.js"></script>
     </body>
 </html>
