add segments in bg to color, front to click, add numbers

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <div class="container" id="spiralTime">
-            <div class="segments" id="segments"></div>
+            <div class="segments" id="segmentsBg"></div>
+            <div class="segments" id="segmentsFg"></div>
+            <div class="circles" id="circles"></div>
+            <div class="numbs" id="numbs"></div>
         </div>
         <script type="module" src="spiral.js"></script>
     </body>
