add handles, color change

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="container" id="spiralTime">
             <div class="segments" id="segmentsBg"></div>
+            <div class="handles" id="handlesBg"></div>
             <div class="segments" id="segmentsFg"></div>
             <div class="circles" id="circles"></div>
             <div class="numbs" id="numbs"></div>
