--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -14,6 +14,20 @@
             <div class="segments" id="segmentsFg"></div>
             <div class="circles" id="circles"></div>
             <div class="numbs" id="numbs"></div>
+            <div class="inputs" id="inputs">
+                <label for="" id="start">
+                    <span>Startzeit</span>
+                    <input type="time" name="start" id="startIn">
+                </label>
+                <label for="" id="end">
+                    <span>Endzeit</span>
+                    <input type="time" name="end" id="endIn">
+                </label>
+                <label for="" id="dur">
+                    <span>Dauer</span>
+                    <input type="time" name="duration" id="durIn">
+                </label>
+            </div>
         </div>
         <script type="module" src="spiral.js"></script>
     </body>
