update ui with new svg, all ui as svg import, add linking ui to fields

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -13,19 +13,19 @@
             <div class="handles" id="handlesBg"></div>
             <div class="segments" id="segmentsFg"></div>
             <div class="circles" id="circles"></div>
-            <div class="numbs" id="numbs"></div>
+            <div class="numbers" id="numbers"></div>
             <div class="inputs" id="inputs">
                 <label for="" id="start">
                     <span>Startzeit</span>
-                    <input type="time" name="start" id="startIn">
+                    <input type="time" name="start" id="startIn" class="time">
                 </label>
                 <label for="" id="end">
                     <span>Endzeit</span>
-                    <input type="time" name="end" id="endIn">
+                    <input type="time" name="end" id="endIn" class="time">
                 </label>
                 <label for="" id="dur">
                     <span>Dauer</span>
-                    <input type="time" name="duration" id="durIn">
+                    <input type="time" name="duration" id="durIn" class="dur">
                 </label>
             </div>
         </div>
