add edit with inputs

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -25,7 +25,7 @@
                 </label>
                 <label for="" id="dur">
                     <span>Dauer</span>
-                    <input type="time" name="duration" id="durIn" class="dur">
+                    <input readonly type="time" name="duration" id="durIn" class="dur">
                 </label>
             </div>
         </div>
