update linking funcs, add ticks

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -17,15 +17,15 @@
             <div class="inputs" id="inputs">
                 <label for="" id="start">
                     <span>Startzeit</span>
-                    <input type="time" name="start" id="startIn" class="time">
+                    <input type="time" name="start" id="startIn" class="time" value="00:00">
                 </label>
                 <label for="" id="end">
                     <span>Endzeit</span>
-                    <input type="time" name="end" id="endIn" class="time">
+                    <input type="time" name="end" id="endIn" class="time" value="00:00">
                 </label>
                 <label for="" id="dur">
                     <span>Dauer</span>
-                    <input readonly type="time" name="duration" id="durIn" class="dur">
+                    <input type="time" name="duration" id="durIn" class="dur" value="00:00">
                 </label>
             </div>
         </div>
