add shadow on click

--- a/src/spiral/index.html
+++ b/src/spiral/index.html
@@ -10,6 +10,9 @@
     <body>
         <div class="container" id="spiralTime">
             <div class="segments" id="segmentsBg"></div>
+            <div class="segments2 no-id" id="segmentsSelectedBg">
+                <svg width="480" height="500" viewBox="0 0 320 340" fill="none" xmlns="http://www.w3.org/2000/svg" id="fragsSelBg"></svg>
+            </div>
             <div class="handles" id="handlesBg"></div>
             <div class="segments" id="segmentsFg"></div>
             <div class="circles" id="circles"></div>
